--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div aos='tada'>tada</div>
   <div aos='wobble'>wobble</div>
   <div aos='fadeIn'>fadeIn</div>
-  <div aos='flip'>flip</div>
+  <div aos='lightSpeedIn'>lightSpeedIn</div>
   <div aos='bounce'>bounce</div>
   <div aos='flash'>flash</div>
   <div aos='pulse'>pulse</div>
