--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
   <div aos='fadeIn'>fadeIn</div>
   <div aos='tada'>tada</div>
   <div aos='wobble'>wobble</div>
-  <div aos='fadeIn'>fadeIn</div>
+  <div aos='random'>random</div>
   <div aos='lightSpeedIn'>lightSpeedIn</div>
   <div aos='bounce'>bounce</div>
   <div aos='flash'>flash</div>
+  <div aos='random'>random</div>
   <div aos='pulse'>pulse</div>
   <div aos='shake'>shake</div>
+  <div aos='random'>random</div>
   <div aos='fadeIn'>fadeIn</div>
   <script src="aos.js"></script>
 </body>
