--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <div aos='pulse'>pulse</div>
   <div aos='shake'>shake</div>
   <div aos='random'>random</div>
+  <div aos='random'>random</div>
+  <div aos='random'>random</div>
+  <div aos='random'>random</div>
   <div aos='fadeIn'>fadeIn</div>
   <script src="aos.js"></script>
 </body>
